--- a/android-pdf-viewer/build.gradle
+++ b/android-pdf-viewer/build.gradle
@@ -1,23 +1,23 @@
 apply plugin: 'com.android.library'
-
+apply plugin: 'maven-publish'
 ext {
     bintrayRepo = 'maven'
     bintrayName = 'android-pdf-viewer'
 
-    publishedGroupId = 'com.github.barteksc'
+    publishedGroupId = 'com.github.yikeng'
     libraryName = 'AndroidPdfViewer'
     artifact = 'android-pdf-viewer'
 
     libraryDescription = 'Android view for displaying PDFs rendered with PdfiumAndroid'
 
-    siteUrl = 'https://github.com/barteksc/AndroidPdfViewer'
-    gitUrl = 'https://github.com/barteksc/AndroidPdfViewer.git'
+    siteUrl = 'https://github.com/yikeng/AndroidPdfViewer'
+    gitUrl = 'https://github.com/yikeng/AndroidPdfViewer.git'
 
-    libraryVersion = '3.2.0-beta.1'
+    libraryVersion = '3.2.0-beta.2'
 
-    developerId = 'barteksc'
-    developerName = 'Bartosz Schiller'
-    developerEmail = 'barteksch@boo.pl'
+    developerId = 'yikeng'
+    developerName = 'Shanks Bin'
+    developerEmail = '2573475062@qq.com'
 
     licenseName = 'The Apache Software License, Version 2.0'
     licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
@@ -25,20 +25,41 @@ ext {
 }
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 31
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 28
+        targetSdkVersion 31
         versionCode 1
-        versionName "3.2.0-beta.1"
+        versionName libraryVersion
+    }
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
     }
 
 }
 
 dependencies {
-    implementation 'com.android.support:support-compat:28.0.0'
-    api 'com.github.barteksc:pdfium-android:1.9.0'
+    implementation 'androidx.core:core:1.9.0'
+    api 'com.github.yikeng:pdfium-android:1.9.1'
 }
 
-apply from: 'bintray.gradle'
+//apply from: 'publish.gradle'
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                // Applies the component for the release build variant.
+                from components.release
+                // You can then customize attributes of the publication as shown below.
+                groupId = publishedGroupId
+                artifactId = artifact
+                version = libraryVersion
+
+            }
+        }
+    }
+}
