--- a/android-pdf-viewer/build.gradle
+++ b/android-pdf-viewer/build.gradle
@@ -44,7 +44,7 @@ android {
 
 dependencies {
     implementation 'androidx.core:core:1.9.0'
-    api 'com.github.yikeng:pdfium-android:1.9.1'
+    api 'com.github.yikeng:PdfiumAndroid:pdfium-android-1.9.1'
 }
 
 //apply from: 'publish.gradle'
